feat: 配置Git跟踪策略
- 跟踪.cursor目录：包含AI协作规则和配置
- 忽略.cursorGrowth目录：包含感知数据和缓存
- 修复pyproject.toml中的硬编码路径

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,4 @@ build-backend = "setuptools.build_meta"
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 addopts = "-v"
-pythonpath = ["E:/study/face-change/md2docx"] 
+pythonpath = ["src"] 
