--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -9,3 +9,10 @@ pyinstaller==6.5.0
 
 # 闭环测试依赖
 markitdown[docx]>=0.1.0
+
+# 代码质量工具
+flake8>=6.0.0
+black>=23.0.0
+mypy>=1.0.0
+isort>=5.12.0
+pre-commit>=3.0.0
