--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,7 +43,7 @@ repos:
     rev: 7.3.0
     hooks:
       - id: flake8
-        args: ["--max-line-length=120", "--extend-ignore=E203,W503"]
+        args: ["--max-line-length=120", "--extend-ignore=E203,W503,E402"]
 
   # Type checking (暂时禁用，待依赖冲突解决)
   # - repo: https://github.com/pre-commit/mirrors-mypy
