--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,5 +1,21 @@
-# 生产环境依赖 - 仅包含运行时必需的包
+# 开发环境依赖 - 包含运行时、测试和开发工具
+# 运行时依赖
 markdown-it-py>=2.1.0
 python-docx>=0.8.11
 flask>=2.0.0
 werkzeug>=2.0.0
+
+# 测试和覆盖率
+pytest>=7.0.0
+pytest-cov>=4.0.0
+coverage>=7.0.0
+
+# 代码质量工具
+flake8>=6.0.0
+black>=23.0.0
+mypy>=1.0.0
+isort>=5.12.0
+
+# 构建工具
+build>=1.0.0
+twine>=4.0.0
