更新项目配置和文档
- 更新README.md和CONTRIBUTING.md文档
- 重构pyproject.toml项目配置
- 移除旧的requirements文件
- 更新CLI模块和转换器组件
- 改进WebUI应用和测试
- 修复测试用例中的异常处理
- 清理重复代码和未使用导入
- 通过pre-commit hooks自动格式化

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,23 @@ dependencies = [
     "werkzeug>=2.0.0"
 ]
 
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+    "pytest-cov>=4.0.0",
+    "coverage>=7.0.0",
+    "flake8>=6.0.0",
+    "black>=23.0.0",
+    "mypy>=1.0.0",
+    "isort>=5.12.0",
+    "build>=1.0.0",
+    "twine>=4.0.0"
+]
+docs = [
+    "sphinx>=5.0.0",
+    "sphinx-rtd-theme>=1.2.0"
+]
+
 [project.urls]
 Homepage = "https://github.com/wangqiqi/md2docx"
 Repository = "https://github.com/wangqiqi/md2docx"
