fix: 修复CI/CD配置和代码质量问题
- 在pyproject.toml中配置flake8忽略E402错误，保持合理的导入架构
- 删除未使用的HTML2DOCX_AVAILABLE导入
- 修复空行过多问题
- 简化CI中的flake8命令，使用配置文件
- 通过pre-commit hooks自动格式化

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,3 +70,7 @@ where = ["src"]
 
 [tool.setuptools.package-data]
 mddocx = ["webui/templates/*.html", "webui/static/**/*"]
+
+[tool.flake8]
+max-line-length = 120
+extend-ignore = ["E203", "W503", "E402"]  # E402: 允许有意的导入位置
