--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
         pip install -e .[dev]
 
     - name: Run flake8
-      run: flake8 src tests --max-line-length=120 --extend-ignore=E203,W503
+      run: flake8 src tests
 
     - name: Run black check
       run: black --check --diff src tests
