fix: 添加独立的flake8配置文件
- 创建.flake8配置文件确保E402错误被正确忽略
- 更新pyproject.toml中的flake8配置
- 保持合理的导入架构设计

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,3 +74,4 @@ mddocx = ["webui/templates/*.html", "webui/static/**/*"]
 [tool.flake8]
 max-line-length = 120
 extend-ignore = ["E203", "W503", "E402"]  # E402: 允许有意的导入位置
+exclude = ["__pycache__", ".git", ".venv", "dist", "build", "*.egg-info"]
